[package]
name = "gswt"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gswt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
bus = "2.4.1"
bytemuck = { version = "1.24.0", features = ["derive"] }
cgmath = "0.18.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui = "0.33.0"
egui-wgpu = { version = "0.33.0", features = ["winit"] }
egui-winit = { version = "0.33.0", default-features = false }
env_logger = "0.11.8"
exr = "1.73.0"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
half = "2.7.1"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "exr"] }
log = "0.4.28"
lru = "0.16.2"
ndarray = "0.16.1"
num-format = "0.4.4"
petgraph = "0.8.3"
pollster = "0.4.0"
rand = "0.9.2"
regex = "1.12.2"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
wasm_thread = { version = "0.3.3", features = ["es_modules"] }
web-sys = { version = "0.3.81", features = [
    'console',

    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'RequestCredentials',
    'Response',
    'Window',
    'ReadableStream',
    'ReadableStreamDefaultReader',

    'Worker',
    'MessageEvent',
] }
wgpu = { version = "27", features = ["webgl"] }
winit = "0.30.12"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = true
debug = false
